# Conways-Game-Opengl

./: CMakeLists.txt
core_engine/headers/: camera.hpp  mesh.hpp  model.hpp  shader.hpp  vertexManager.hpp  windowManager.hpp
core_engine/src/: glad.c  mesh.cpp  model.cpp  shader.cpp  stb_image.cpp  vertexManager.cpp  windowManager.cpp
headers/: components.hpp  entity.hpp  neighbors.hpp  perlin.hpp  pos.hpp  scene.hpp  state.hpp
shaders/: rect.frag.glsl  rect.vert.glsl
src/: main.cpp  perlin.cpp
